--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -17,7 +17,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 
   <!-- Pulling in AJ style (always after bootstrap) -->
-  <link rel="stylesheet" type="text/css" href="../css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 	<!-- favicon support -->
 	<link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png">
