--- a/_includes/general/js-pullins.html
+++ b/_includes/general/js-pullins.html
@@ -8,4 +8,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js" integrity="sha256-a/H26zcixe1svu2fYax7ANJMSzGYyJNI52hKKYJTar8=" crossorigin="anonymous"></script>
 
 <!-- pulling in AJ animations -->
-<script type="text/javascript" src="../js/animations.js"></script>
+<script type="text/javascript" src="js/animations.js"></script>
