--- a/_layouts/recept.html
+++ b/_layouts/recept.html
@@ -3,9 +3,12 @@ layout: default
 ---
 <div class="container">
   <div id="receptJumbotron"style="background-image: url({{site.baseurl}}/img/recepten/{{page.imageName}})" class="jumbotron">
-    <h2>{{ page.title }}</h2>
+    <h1>{{page.title}}</h1>
   </div>
-  <a id="backToRecepten" href="{{site.baseurl}}/recepten.html"><i class="fa fa-undo" aria-hidden="true"></i> recepten</a>
+  <div class="receptTitleInfo">
+    <a id="backToRecepten" href="{{site.baseurl}}/recepten.html"><i class="fa fa-undo" aria-hidden="true"></i> recepten</a>
+    <p id="date">{{page.dateAdded}}</p>
+  </div>
   <div class="receptContent">
     <label><h5>kies aantal personen... (<span class="personen">4</span>)</h5>
       <div class="inputBar">
