--- a/_sass/pages/recepten/recepten.sass
+++ b/_sass/pages/recepten/recepten.sass
@@ -6,7 +6,7 @@
   display: flex
   justify-content: center
   margin-top: 40px
-  h2
+  h2, h1
     align-self: center
     color: white
     text-shadow: 0px 4px 3px black
