--- a/_sass/pages/home/news.sass
+++ b/_sass/pages/home/news.sass
@@ -1,14 +1,10 @@
 #newsSection
   #logoFlower
-    overflow: hidden
-    border-radius: 100%
-    svg
-      margin-bottom: -49%
-
     .logo
+      margin: 0 auto
       width: 50%
-      height: 50%
-      margin: 0 auto 0 auto
+      max-width: 400px
+
   .newsCard
     border: 10px solid white
     border-radius: 20px
