--- a/_includes/pages/home/news.html
+++ b/_includes/pages/home/news.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
 
-      <div id="logoFlower" class="col-lg-12 col-sm-12">
+      <div id="logoFlower">
         <div class="logo">{% include logos/leaf-Bloei-en-Leef.svg %}</div>
       </div>
 
