--- a/_sass/pages/home/news.sass
+++ b/_sass/pages/home/news.sass
@@ -2,8 +2,7 @@
   #logoFlower
     .logo
       margin: 0 auto
-      width: 50%
-      max-width: 400px
+      height: 20vh
 
   .newsCard
     border: 10px solid white
