--- a/_includes/pages/home/news.html
+++ b/_includes/pages/home/news.html
@@ -3,7 +3,7 @@
     <div class="row">
 
       <div id="logoFlower">
-        <div class="logo">{% include logos/leaf-Bloei-en-Leef.svg %}</div>
+        <!-- <div class="logo">{% include logos/leaf-Bloei-en-Leef.svg %}</div> -->
       </div>
 
       <div id="card1" class="col-lg-4 col-sm-6 newsCard">
