recept nav extra

--- a/_includes/pages/home/news.html
+++ b/_includes/pages/home/news.html
@@ -8,7 +8,7 @@
 
       <div id="card1" class="col-lg-4 col-sm-6 newsCard">
         <div class="cardBorder">
-          <div class="imgCard">
+          <div class="imgCard" style="background-image: url({{site.baseurl}}/img/recepten/brownie.jpg)">
             <div class="cardTitle">
               <h2><a href="{{site.baseurl}}/recepten.html">recepten</a></h2>
             </div>
