--- a/_layouts/recept.html
+++ b/_layouts/recept.html
@@ -17,6 +17,8 @@ layout: default
         <span>12</span>
       </div>
     </label>
+
+    <p><strong>{{page.intro}}</strong></p>
     {{ content }}
   </div>
 </div>
