--- a/_sass/pages/home/news.sass
+++ b/_sass/pages/home/news.sass
@@ -24,6 +24,14 @@
         padding: 10px 20px
         h3, h4
           text-align: left
+        .newsImgUrl
+          display: none
+
+  #card1
+    .displayNot
+      display: none
+    .display
+      display: relative
 
   #card2
     .imgCard
