url fix recept home card

--- a/_includes/pages/home/news.html
+++ b/_includes/pages/home/news.html
@@ -18,7 +18,7 @@
                   <div class="newsRecept displayNot">
                     <h3>{{ recept.title }}</h3>
                     <h4>{{ recept.intro }}</h4>
-                    <p class="newsImgUrl">{{ site.baseurl }}img/recepten/{{ recept.imageName }}</p>
+                    <p class="newsImgUrl">{{ site.baseurl }}/img/recepten/{{ recept.imageName }}</p>
                   </div>
                 {% endfor %}
           </div>
