--- a/_sass/pages/recepten/recept.sass
+++ b/_sass/pages/recepten/recept.sass
@@ -7,7 +7,7 @@
   flex-direction: row
   justify-content: space-between
   width: 100%
-  padding: 0 10px
+  padding: 0 20px 0 14px
 
   #backToRecepten
     color: white
@@ -20,7 +20,7 @@
 
 .receptContent
   label
-    margin-bottom: 35px
+    // margin-bottom: 35px
     width: 100%
     .inputBar
       display: flex
