--- a/_sass/pages/home/cards.sass
+++ b/_sass/pages/home/cards.sass
@@ -7,13 +7,18 @@
     background-size: cover
     margin: 0px
     padding: 0px
-    
     .fadeCard
       display: flex
       flex-direction: column
       width: 100%
       height: 100%
       background-color: rgba(255,255,255,0.0)
+      padding: 0 15px
+      h2
+        color: white
+        background-color: rgba( 0,0,0,0.5)
+        padding: 10px
+        border-radius: $bl-border-radius-smal
       &:hover
         cursor: pointer
         background-color: rgba(255,255,255,0.8)
@@ -26,16 +31,7 @@
         justify-content: center
         margin: auto 20px 0 20px
         opacity: 0
-      .cardTitle
-        background-color: rgba(0,0,0,0.5)
-        padding: 2px
-        border-radius: 10px
-        margin-top: auto
-        margin-bottom: 15px
-        justify-content: flex-end
-        width: 98%
-      h2
-        color: white
+
   #card1
     background-image: url("../img/cards/bloei-en-leef-maaike-en-alwin.jpg")
   #card2
