--- a/_layouts/recept.html
+++ b/_layouts/recept.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="container">
-  <div id="receptJumbotron"style="background-image: url({{site.baseurl}}/img/recepten/{{page.imageName}})" class="jumbotron">
+  <div id="pageJumbotron"style="background-image: url({{site.baseurl}}/img/recepten/{{page.imageName}})" class="jumbotron">
     <h1>{{page.title}}</h1>
   </div>
   <div class="receptTitleInfo">
@@ -19,7 +19,19 @@ layout: default
     </label>
     <h5><i class="fa fa-clock-o" aria-hidden="true"></i>  {{ page.time }}  min
       {% if page.vegetarian %}
-      <i class="fa fa-pagelines" aria-hidden="true"></i>  vegetarisch
+      <span class="icon-vegetarian"></span>
+      {% endif %}
+      {% if page.hormone %}
+      <span class="icon-hormone"></span>
+      {% endif %}
+      {% if page.glutenFree %}
+      <span class="icon-nogluten"></span>
+      {% endif %}
+      {% if page.dairyFree %}
+      <span class="icon-nomilk"></span>
+      {% endif %}
+      {% if page.sugarFree %}
+      <span class="icon-nosugar"></span>
       {% endif %}</h5>
     <p><strong>{{ page.intro }}</strong></p>
     {{ content }}
