--- a/_includes/general/navigation1.html
+++ b/_includes/general/navigation1.html
@@ -1,6 +1,6 @@
 <nav id="nav1">
-  <a href="{{site.baseurl}}/index.html">home</a>
-  <a href="{{site.baseurl}}/recepten.html">recepten</a>
+  <a href="{{site.baseurl}}{{ url }}/index.html">home</a>
+  <a href="{{site.baseurl}}{{ url }}/recepten.html">recepten</a>
   <a href="">bio tuin</a>
   <a href="">producten</a>
   <a href="">activiteiten</a>
