--- a/_sass/pages/home/news.sass
+++ b/_sass/pages/home/news.sass
@@ -30,7 +30,7 @@
           text-align: left
           &:hover
             color: $bl-hover-color
-        .newsImgUrl
+        .ImgUrl
           display: none
 
 
