--- a/_sass/pages/recepten/recept.sass
+++ b/_sass/pages/recepten/recept.sass
@@ -44,6 +44,9 @@
   #date
     text-align: right
 
+  a
+    text-decoration: underline
+
   // input range styling genrated from http://danielstern.ca/range.css/#/
   input[type=range]
     -webkit-appearance: none
