--- a/_sass/pages/recepten/recepten.sass
+++ b/_sass/pages/recepten/recepten.sass
@@ -41,6 +41,7 @@
     background-color: rgba( 0,0,0,0.5)
     padding: 10px
     border-radius: $bl-border-radius-smal
+    word-wrap: break-word
     a
       color: white
       &:hover
