--- a/_includes/general/navigation2.html
+++ b/_includes/general/navigation2.html
@@ -2,7 +2,7 @@
   <a href="">Bloei en leef?</a>
   <a href="">foodsafari</a>
   <a href="">weekenden en retraites</a>
-  <a href="">weetjes</a>
+  <a href="{{site.baseurl}}{{ url }}/weetjes.html">weetjes</a>
   <a href="">recepten</a>
   <a href="">culinaire fotografie</a>
   <a href="">agenda</a>
