--- a/_layouts/recept.html
+++ b/_layouts/recept.html
@@ -6,7 +6,7 @@ layout: default
     <h1>{{page.title}}</h1>
   </div>
   <div class="receptTitleInfo">
-    <a id="backToRecepten" href="{{site.baseurl}}/recepten.html"><i class="fa fa-undo" aria-hidden="true"></i> RECEPTEN</a>
+    <a id="backToRecepten" href="{{site.baseurl}}{{ url }}/recepten.html"><i class="fa fa-undo" aria-hidden="true"></i> RECEPTEN</a>
     <p id="date">{{page.dateAdded}}</p>
   </div>
   <div class="receptContent">
