--- a/_sass/pages/home/header.sass
+++ b/_sass/pages/home/header.sass
@@ -10,8 +10,8 @@
 
 	// *****logo*****
 	.logo
-		width: 50%
-		height: 50%
+		width: 50vw
+		height: 50vw
 		max-width: 300px
 		max-height: 300px
 		margin: 12vh auto 4vh auto
@@ -25,6 +25,7 @@
 
 	// *****kicker*****
 	.kicker
+		align-self: center
 		padding: 0 5%
 		margin: auto
 		display: flex
@@ -38,13 +39,13 @@
 
 	// *****slider circles*****
 	.circles
+		align-self: flex-end
 		width: 90vw
 		margin: auto
 		margin-bottom: 20px
 		display: flex
 		flex-direction: row
 		justify-content: space-around
-		align-self: flex-end
 		&:hover
 			cursor: pointer
 		.circle
