--- a/_sass/pages/recepten/recepten.sass
+++ b/_sass/pages/recepten/recepten.sass
@@ -12,7 +12,7 @@
     color: white
     text-shadow: 2px 2px 5px black, 2px -2px 5px black, -2px 2px 5px black, 0px 0px 15px black
 .receptenInfo
-  display: inline-flex
+  display: flex
   flex-direction: row
   justify-content: space-between
   width: 100%
@@ -23,6 +23,8 @@
     .suffice
       margin-right: 20px
   #searchIcon
+    align-self: flex-end
+    margin-left: auto
     &:hover
       cursor: pointer
 .receptenNav
