--- a/_includes/general/copyright.html
+++ b/_includes/general/copyright.html
@@ -1,6 +1,6 @@
 <section id="copyright">
   <p>Copyright 2017 Bloei en Leef</p>
-  <p><img src="favicon.ico" alt=""></p>
+  <p><img src="{{ site.baseurl }}/favicon.ico" alt=""></p>
   <p>
     <i class="fa fa-wrench" aria-hidden="true"></i>
     <a href="#"></a>Ontwerp en realisatie LOE.NZ
