--- a/_includes/pages/home/cards.html
+++ b/_includes/pages/home/cards.html
@@ -3,49 +3,60 @@
   <div class="container">
     <div class="row">
 
-      <div id="card1" class="col-lg-4 col-sm-6 card">
-        <div onclick="" class="fadeCard">
-          <div class="cardInfo">
+      <div class="col-lg-4 col-sm-6">
+        <div id="card1" class="gridSpace card">
+          <div onclick="" class="fadeCard">
+            <div class="cardInfo">
               <h3>Wat leuk dat jij Bloei en Leef gevonden hebt! En natuurlijk stellen wij ons graag aan jou voor</h3>
               <h4>lees meer </h4>
+            </div>
+            <h2>Bloei en Leef?</h2>
           </div>
-          <h2>Bloei en Leef?</h2>
         </div>
+
       </div>
-      <div id="card2" class="col-lg-4 col-sm-6 card">
-        <div onclick="" class="fadeCard">
-          <div class="cardInfo">
+      <div class="col-lg-4 col-sm-6">
+        <div id="card2" class="gridSpace card">
+          <div onclick="" class="fadeCard">
+            <div class="cardInfo">
               <h3>Heb jij behoefte aan een weekend voor jezelf?</h3>
               <h4>lees meer </h4>
+            </div>
+            <h2>weekenden & retraites</h2>
           </div>
-          <h2>weekenden & retraites</h2>
         </div>
       </div>
-      <div id="card3" class="col-lg-4 col-sm-6 card">
-        <div onclick="" class="fadeCard">
-          <div class="cardInfo">
+      <div class="col-lg-4 col-sm-6">
+        <div id="card3" class="gridSpace card">
+          <div onclick="" class="fadeCard">
+            <div class="cardInfo">
               <h3>Wil je meer balans tussen lichaam, leven en werk?</h3>
               <h4>lees meer </h4>
+            </div>
+            <h2>coaching</h2>
           </div>
-          <h2>coaching</h2>
         </div>
       </div>
-      <div id="card4" class="col-lg-4 col-sm-6 card">
-        <div onclick="" class="fadeCard">
-          <div class="cardInfo">
+      <div class="col-lg-4 col-sm-6">
+        <div id="card4" class="gridSpace card">
+          <div onclick="" class="fadeCard">
+            <div class="cardInfo">
               <h3>allemaal blogs!</h3>
               <h4>lees meer </h4>
+            </div>
+            <h2>blogs</h2>
           </div>
-          <h2>blogs</h2>
         </div>
       </div>
-      <div id="card5" class="col-lg-8 col-sm-12 card">
-        <div onclick="" class="fadeCard">
-          <div class="cardInfo">
+      <div class="col-lg-8 col-sm-12">
+        <div id="card5" class="gridSpace card">
+          <div onclick="" class="fadeCard">
+            <div class="cardInfo">
               <h3>Eigengemaakt Lekkers!</h3>
               <h4>lees meer </h4>
+            </div>
+            <h2>gezond eten</h2>
           </div>
-          <h2>gezond eten</h2>
         </div>
       </div>
     </div>
