FoodSafai and Bloei en leef added

--- a/_sass/general/page.sass
+++ b/_sass/general/page.sass
@@ -42,6 +42,17 @@ a
     color: $bl-hover-color
     text-decoration: none
 
+a
+  h2, h4
+    &:hover
+      color: $bl-hover-color
+      text-decoration: none
+
+ul
+  list-style-image: url($baseurl + "/favicon.ico")
+  font-size: 1.3em
+  line-height: 20px
+
 .gridSpace
   margin: 10px
 
