--- a/_includes/general/navigation2.html
+++ b/_includes/general/navigation2.html
@@ -1,9 +1,8 @@
 <nav id="nav2">
-  <a href="">Bloei en leef?</a>
-  <a href="">foodsafari</a>
-  <a href="">weekenden en retraites</a>
+  <a href="{{site.baseurl}}/bloei-en-leef">Bloei & leef?</a>
+  <a href="{{site.baseurl}}/foodsafari">foodsafari</a>
+  <a href="">weekenden & retraites</a>
   <a href="{{site.baseurl}}/weetjes">weetjes</a>
-  <a href="">recepten</a>
   <a href="">culinaire fotografie</a>
   <a href="">agenda</a>
   <a href="">nieuwsbrief</a>
