--- a/_includes/pages/home/cards.html
+++ b/_includes/pages/home/cards.html
@@ -8,9 +8,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>Wat leuk dat jij Bloei en Leef gevonden hebt! En natuurlijk stellen wij ons graag aan jou voor</h3>
-              <h4>lees meer </h4>
+              <a href="{{ site.baseurl }}/bloei-en-leef"><h4>lees meer</h4></a>
             </div>
-            <h2>Bloei en Leef?</h2>
+            <a href="{{ site.baseurl }}/bloei-en-leef"><h2>Bloei & Leef?</h2></a>
           </div>
         </div>
 
@@ -20,9 +20,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>Heb jij behoefte aan een weekend voor jezelf?</h3>
-              <h4>lees meer </h4>
+              <a href="{{ site.baseurl }}/"><h4>lees meer</h4></a>
             </div>
-            <h2>weekenden & retraites</h2>
+            <a href="#"><h2>weekenden & retraites</h2></a>
           </div>
         </div>
       </div>
@@ -31,9 +31,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>Wil je meer balans tussen lichaam, leven en werk?</h3>
-              <h4>lees meer </h4>
+              <a href="{{ site.baseurl }}/"><h4>lees meer</h4></a>
             </div>
-            <h2>coaching</h2>
+            <a href="#"><h2>coaching</h2></a>
           </div>
         </div>
       </div>
@@ -42,9 +42,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>allemaal blogs!</h3>
-              <h4>lees meer </h4>
+              <a href="{{ site.baseurl }}/blogs"><h4>lees meer</h4></a>
             </div>
-            <h2>blogs</h2>
+            <a href="{{ site.baseurl }}/blogs"><h2>blogs</h2></a>
           </div>
         </div>
       </div>
@@ -53,9 +53,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>Eigengemaakt Lekkers!</h3>
-              <h4>lees meer </h4>
+              <a href="{{ site.baseurl }}/recepten"><h4>lees meer</h4></a>
             </div>
-            <h2>gezond eten</h2>
+            <a href="{{ site.baseurl }}/recepten"><h2>gezond eten</h2></a>
           </div>
         </div>
       </div>
