plus partners bio tui eb Fotografie

--- a/_includes/general/navigation2.html
+++ b/_includes/general/navigation2.html
@@ -1,10 +1,10 @@
 <nav id="nav2">
   <a href="{{site.baseurl}}/bloei-en-leef">Bloei & leef?</a>
   <a href="{{site.baseurl}}/foodsafari">foodsafari</a>
-  <a href="">weekenden & retraites</a>
+  <a href="{{site.baseurl}}/weekenden-en-retraites">weekenden & retraites</a>
   <a href="{{site.baseurl}}/weetjes">weetjes</a>
-  <a href="">culinaire fotografie</a>
+  <a href="{{site.baseurl}}/culinaire-fotografie">culinaire fotografie</a>
   <a href="">agenda</a>
   <a href="">nieuwsbrief</a>
-  <a href="">partners</a>
+  <a href="{{site.baseurl}}/partners">partners</a>
 </nav>
