--- a/_includes/general/statNav.html
+++ b/_includes/general/statNav.html
@@ -5,7 +5,8 @@
   </div>
 
   <div id="statNav" class="unClicked">
-    {% include general/navigation1.html %}
+    {% include general/navigation1.html %}{% include general/navigation2.html %}
+
   </div>
 
 </div>
