--- a/_includes/pages/home/cards.html
+++ b/_includes/pages/home/cards.html
@@ -20,9 +20,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>Heb jij behoefte aan een weekend voor jezelf?</h3>
-              <a href="{{ site.baseurl }}/"><h4>lees meer</h4></a>
+              <a href="{{site.baseurl}}/weekenden-en-retraites"><h4>lees meer</h4></a>
             </div>
-            <a href="#"><h2>weekenden & retraites</h2></a>
+            <a href="{{site.baseurl}}/weekenden-en-retraites"><h2>weekenden & retraites</h2></a>
           </div>
         </div>
       </div>
