--- a/_sass/general/statNav.sass
+++ b/_sass/general/statNav.sass
@@ -26,6 +26,7 @@
     top: 25px
 
     nav
+      display: inline
       justify-content: flex-start
       a
         margin: 0px 10px
@@ -35,5 +36,5 @@
     opacity: 1
 
   .unClicked
-    left: -1000px
+    left: -2000px
     opacity: 0
