--- a/_sass/general/footer.sass
+++ b/_sass/general/footer.sass
@@ -53,6 +53,9 @@ footer
         font-size: 1.3em
 
   #socialMedia
+    display: inline-flex
+    flex-direction: column
+    justify-content: space-around
     background: #3494E6
     background: -webkit-linear-gradient(to left, $bl-hover-color , $bl-green)
     background: linear-gradient(to left, $bl-hover-color , $bl-green)
@@ -72,7 +75,7 @@ footer
       justify-content: space-around
       width: 100%
       i
-        // color: $bl-green
+        color: white
         margin: 3%
         font-size: 4em
         &:hover
