--- a/_layouts/generalPage.html
+++ b/_layouts/generalPage.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <section class="generalPageSection">
-  <div class="titlePicture" style="background-image: url({{site.baseurl}}/img/generalPages/{{page.imageName}})">
-  </div>
+  <div class="grayLine"></div>
+  <div class="titlePicture" style="background-image: url({{site.baseurl}}/img/generalPages/{{page.imageName}})"></div>
   <div class="container">
     <h1>{{ page.title }}</h1>
     <p>{{ page.dateAdded }}</p>
