--- a/_sass/pages/generalPage/general.sass
+++ b/_sass/pages/generalPage/general.sass
@@ -6,7 +6,17 @@
     height: 60vh
     width: 60vh
     border-radius: 100%
-    margin: 10vh auto
+    margin: -32.5vh auto 0 auto
+
+  .grayLine
+    height: 3vh
+    background: #3494E6
+    background: -webkit-linear-gradient(to left, white, $bl-green, $bl-hover-color, $bl-green, white)
+    background: linear-gradient(to left, white, $bl-green, $bl-hover-color, $bl-green, white)
+    margin-top: 35vh
+    width: 95vw
+    margin-left: auto
+    margin-right: auto
 
   img
     display: inline
