--- a/_includes/general/navigation2.html
+++ b/_includes/general/navigation2.html
@@ -4,7 +4,7 @@
   <a href="{{site.baseurl}}/weekenden-en-retraites">weekenden & retraites</a>
   <a href="{{site.baseurl}}/weetjes">weetjes</a>
   <a href="{{site.baseurl}}/culinaire-fotografie">culinaire fotografie</a>
-  <a href="">agenda</a>
+  <a href="{{site.baseurl}}/agenda">agenda</a>
   <a href="">nieuwsbrief</a>
   <a href="{{site.baseurl}}/partners">partners</a>
 </nav>
