--- a/_includes/pages/home/cards.html
+++ b/_includes/pages/home/cards.html
@@ -6,8 +6,9 @@
       <div class="col-lg-4 col-sm-6">
         <div id="card1" class="gridSpace card">
           <div onclick="" class="fadeCard">
-            <div class="cardInfo">
+            <div class="cardInfo" >
               <h3>Wat leuk dat jij Bloei en Leef gevonden hebt! En natuurlijk stellen wij ons graag aan jou voor</h3>
+              <a href="{{ site.baseurl }}/bloei-en-leef"><h4>lees meer</h4></a>
               <a href="{{ site.baseurl }}/bloei-en-leef"><h4>lees meer</h4></a>
             </div>
             <a href="{{ site.baseurl }}/bloei-en-leef"><h2>Bloei & Leef?</h2></a>
