ios favican fix

--- a/_includes/general/navigation1.html
+++ b/_includes/general/navigation1.html
@@ -4,5 +4,5 @@
   <a href="{{site.baseurl}}/bio-tuin">bio tuin</a>
   <a href="">producten</a>
   <a href="">activiteiten</a>
-  <a href="">contact</a>
+  <a href="{{site.baseurl}}/contact">contact</a>
 </nav>
