--- a/_sass/pages/home/cards.sass
+++ b/_sass/pages/home/cards.sass
@@ -33,12 +33,12 @@
         opacity: 0
 
   #card1
-    background-image: url($baseurl + "/img/cards/bloei-en-leef-maaike-en-alwin.jpg")
+    background-image: url("../img/cards/bloei-en-leef-maaike-en-alwin.jpg")
   #card2
-    background-image: url($baseurl + "/img/cards/bloei-en-leef-maaike-rug.jpg")
+    background-image: url("../img/cards/bloei-en-leef-maaike-rug.jpg")
   #card3
-    background-image: url($baseurl + "/img/cards/bloei-en-leef-maaike-druppel.jpg")
+    background-image: url("../img/cards/bloei-en-leef-maaike-druppel.jpg")
   #card4
-    background-image: url($baseurl + "/img/cards/bloei-en-leef-spinazie.jpg")
+    background-image: url("../img/cards/bloei-en-leef-spinazie.jpg")
   #card5
-    background-image: url($baseurl + "/img/cards/bloei-en-leef-maaike-plukken.jpg")
+    background-image: url("../img/cards/bloei-en-leef-maaike-plukken.jpg")
