--- a/_includes/general/navigation1.html
+++ b/_includes/general/navigation1.html
@@ -1,4 +1,4 @@
-<nav id="nav1">
+<nav class="nav1">
   <a href="{{site.baseurl}}/index">home</a>
   <a href="{{site.baseurl}}/recepten">recepten</a>
   <a href="{{site.baseurl}}/bio-tuin">bio tuin</a>
