--- a/_includes/general/statNav.html
+++ b/_includes/general/statNav.html
@@ -5,8 +5,9 @@
   </div>
 
   <div id="statNav" class="unClicked">
-    {% include general/navigation1.html %}{% include general/navigation2.html %}
-
+    {% include general/navigation1.html %}
+      <a id="meer" href="#">meer</a>
+      <span id="meerSpan" class="displayNone">{% include general/navigation2.html %}</span>
   </div>
 
 </div>
