--- a/_sass/general/footer.sass
+++ b/_sass/general/footer.sass
@@ -4,7 +4,7 @@ footer
   padding-top: 7vh
   #footerNav
     margin-bottom: 8vh
-    #nav1
+    .nav1
       display: inline
       a:nth-child(1)
         font-size: 1em
