--- a/_includes/general/statNav.html
+++ b/_includes/general/statNav.html
@@ -7,7 +7,9 @@
   <div id="statNav" class="unClicked">
     {% include general/navigation1.html %}
       <a id="meer" href="#">meer</a>
-      <span id="meerSpan" class="displayNone">{% include general/navigation2.html %}</span>
+      <span id="meerSpan" class="displayNone">{% include general/navigation2.html %}
+      </span>
+      {% include general/searchForm.html %}
   </div>
 
 </div>
