--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -39,4 +39,7 @@
 	<meta name="msapplication-TileImage" content="{{site.baseurl}}/favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
+	<!-- Pulling in jQuery (online repository) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 </head>
