search fuction added

--- a/_sass/general/variables.sass
+++ b/_sass/general/variables.sass
@@ -4,5 +4,5 @@ $bl-text-color: #444444
 $bl-news-gray: #DCDCDC
 $bl-border-radius: 20px
 $bl-border-radius-medium: 15px
-$bl-border-radius-smal: 10px
+$bl-border-radius-small: 10px
 $bl-card-border-padding: 10px
