--- a/_sass/pages/content/contentList.sass
+++ b/_sass/pages/content/contentList.sass
@@ -33,7 +33,7 @@
     h2
       background-color: rgba( 0,0,0,0.5)
       padding: 10px
-      border-radius: $bl-border-radius-smal
+      border-radius: $bl-border-radius-small
       word-wrap: break-word
       margin: 10px
       a
@@ -48,12 +48,12 @@
         padding: 10px
       .receptIntro
         padding: 10px
-        border-radius: $bl-border-radius-smal
+        border-radius: $bl-border-radius-small
         margin-bottom: 10px
         opacity: 0
       &:hover
         background-color: rgba( 255,255,255,0.9)
-        border-radius: $bl-border-radius-smal
+        border-radius: $bl-border-radius-small
     .receptInfoCard:hover .receptIntro
       opacity: 1
     .receptInfoCard:hover .receptInfo
