--- a/_sass/pages/home/cards.sass
+++ b/_sass/pages/home/cards.sass
@@ -18,7 +18,7 @@
         background-color: rgba( 0,0,0,0.5)
         margin: 10px
         padding: 10px
-        border-radius: $bl-border-radius-smal
+        border-radius: $bl-border-radius-small
       &:hover
         cursor: pointer
         background-color: rgba(255,255,255,0.8)
