--- a/_sass/pages/generalPage/contactForm.sass
+++ b/_sass/pages/generalPage/contactForm.sass
@@ -22,6 +22,7 @@
       background-color: $bl-green
       margin: 10px 0
       color: white
+      border-radius: $bl-border-radius-small
 
     textarea
       height: 160px
