--- a/_sass/pages/searchPage.sass
+++ b/_sass/pages/searchPage.sass
@@ -13,6 +13,7 @@
     color: $bl-green
     height: 2.5em
     border-radius: $bl-border-radius-small
+    -webkit-appearance: none
     &:focus
       background-color: white
       border: 2px solid $bl-green
