--- a/_includes/pages/home/header.html
+++ b/_includes/pages/home/header.html
@@ -1,8 +1,7 @@
 <section id="headerSection" class="header2">
   <div class="logo">{% include logos/logo-Bloei-en-Leef.svg %}</div>
   <div class="kicker">
-    <h1 id="kickerText">Herontdekken wie je werkelijk bent</h1>
-    <h4>lees meer</h4>
+    <a id='kickerText' href='coaching'><h1>Herontdekken wie je werkelijk bent</h1></a>
   </div>
 
   <div class="circles">
