--- a/_includes/general/footer.html
+++ b/_includes/general/footer.html
@@ -15,7 +15,7 @@
           <a href="https://www.facebook.com/BloeienLeef"><i class="fa fa-facebook" aria-hidden="true"></i></a>
           <a href="https://www.pinterest.com/bloeienleef"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
           <a href="https://instagram.com/bloeienleef"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a href="https://www.google.nl/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=badkuip+kopen&tbs=ss:44,vw:g,p_ord:pd&tbm=shop"><i class="fa fa-bath" aria-hidden="true"></i></a>
+          <a href="https://nl.pinterest.com/explore/badkuipen/"><i class="fa fa-bath" aria-hidden="true"></i></a>
         </div>
       </div>
 
