--- a/_includes/general/navigation2.html
+++ b/_includes/general/navigation2.html
@@ -7,4 +7,5 @@
   <a href="{{site.baseurl}}/agenda">agenda</a>
   <a href="">nieuwsbrief</a>
   <a href="{{site.baseurl}}/partners">partners</a>
+  <a href="{{site.baseurl}}/coaching">coaching</a>
 </nav>
