--- a/_sass/general/copyright.sass
+++ b/_sass/general/copyright.sass
@@ -3,6 +3,8 @@
   margin-bottom: 0
   background-color: $bl-news-gray
   padding-top: 3px
+  display: flex
+  justify-content: center
 
   p
     display: inline
