meer knop in app

--- a/_includes/general/statNav.html
+++ b/_includes/general/statNav.html
@@ -6,7 +6,7 @@
 
   <div id="statNav" class="unClicked">
     {% include general/navigation1.html %}
-      <a id="meer" href="#">meer</a>
+      <a id="meer" style="cursor: pointer;">meer</a>
       <span id="meerSpan" class="displayNone">{% include general/navigation2.html %}
       </span>
       {% include general/searchForm.html %}
