--- a/_includes/general/js-pullins.html
+++ b/_includes/general/js-pullins.html
@@ -14,3 +14,4 @@
 <!-- pulling in AJ animations -->
 <script type="text/javascript" src="{{site.baseurl}}/js/animations.js"></script>
 <script type="text/javascript" src="{{site.baseurl}}/js/iOSWebAppNav.js"></script>
+<script type="text/javascript" src="{{site.baseurl}}/js/addtohomescreen.js"></script>
