--- a/_includes/general/statNav.html
+++ b/_includes/general/statNav.html
@@ -5,9 +5,9 @@
   </div>
 
   <div id="statNav" class="unClicked">
-    <a id="searchIconStat" onclick="" style="cursor: pointer;"><i class="fa fa-search" aria-hidden="true"></i></a>
+    <p id="searchIconStat" class="aStyle"onclick="" style="cursor: pointer;"><i class="fa fa-search" aria-hidden="true"></i></p>
     {% include general/navigation1.html %}
-    <a id="meer" onclick="" style="cursor: pointer;">meer</a>
+    <p id="meer" class="aStyle" onclick="" style="cursor: pointer;">meer</p>
     <span id="meerSpan" class="displayNone">{% include general/navigation2.html %}</span>
     <div id="searchNav"class="height0">
       {% include general/searchForm.html %}
