--- a/_sass/general/statNav.sass
+++ b/_sass/general/statNav.sass
@@ -34,10 +34,11 @@
       a:nth-child(1)
         margin-left: 0px
 
-  #meer
+  .aStyle
     color: $bl-hover-color
     font-weight: bold
     margin-right: 10px
+    display: inline
 
   .clicked
     left: 70px
