--- a/_sass/general/statNav.sass
+++ b/_sass/general/statNav.sass
@@ -39,18 +39,17 @@
     font-weight: bold
     margin-right: 10px
     display: inline
+    cursor: pointer
 
   .clicked
     left: 70px
     opacity: 1
-
   .unClicked
     left: -2000px
     opacity: 0
 
   .displayNone
     display: none
-
   .displayInLine
     display: inline
 
