--- a/_sass/pages/home/cards.sass
+++ b/_sass/pages/home/cards.sass
@@ -13,6 +13,10 @@
       height: 100%
       background-color: rgba(255,255,255,0.0)
       border-radius: $bl-border-radius-medium
+      h4
+        color: $bl-green
+        font-weight: bolder
+        font-size: 1.3em
       h2
         color: white
         background-color: rgba( 0,0,0,0.5)
