--- a/_includes/general/navigation1.html
+++ b/_includes/general/navigation1.html
@@ -1,8 +1,9 @@
 <nav class="nav1">
   <a href="{{site.baseurl}}/index">home</a>
   <a href="{{site.baseurl}}/recepten">recepten</a>
-  <a href="{{site.baseurl}}/bio-tuin">bio tuin</a>
-  <a href="">producten</a>
-  <a href="">activiteiten</a>
+  <a href="{{site.baseurl}}/blogs">blogs</a>
+  <a href="{{site.baseurl}}/weetjes">weetjes</a>
+  <a href="{{site.baseurl}}/weekenden-en-retraites">weekenden & retraites</a>
+  <a href="{{site.baseurl}}/coaching">coaching</a>
   <a href="{{site.baseurl}}/contact">contact</a>
 </nav>
