--- a/_includes/pages/home/cards.html
+++ b/_includes/pages/home/cards.html
@@ -7,7 +7,7 @@
         <div id="card1" class="gridSpace card">
           <div onclick="" class="fadeCard">
             <div class="cardInfo" >
-              <h3>Wat leuk dat jij Bloei en Leef gevonden hebt! En natuurlijk stellen wij ons graag aan jou voor</h3>
+              <h3>Wat leuk dat jij Bloei en Leef gevonden hebt! We stellen ons graag aan jou voor</h3>
               <a href="{{ site.baseurl }}/bloei-en-leef"><h4>lees meer</h4></a>
             </div>
             <a href="{{ site.baseurl }}/bloei-en-leef"><h2>Bloei & Leef?</h2></a>
@@ -33,7 +33,7 @@
               <h3>Wil je meer balans tussen lichaam, leven en werk?</h3>
               <a href="{{ site.baseurl }}/"><h4>lees meer</h4></a>
             </div>
-            <a href="#"><h2>coaching</h2></a>
+            <a href="{{ site.baseurl }}/coaching"><h2>coaching</h2></a>
           </div>
         </div>
       </div>
@@ -41,10 +41,10 @@
         <div id="card4" class="gridSpace card">
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
-              <h3>allemaal blogs!</h3>
-              <a href="{{ site.baseurl }}/blogs"><h4>lees meer</h4></a>
+              <h3>Dit is een Good Life & Foodsafari in één, vandaar de naam: Optimaal Gezond Safari</h3>
+              <a href="{{ site.baseurl }}/bio-tuin"><h4>lees meer</h4></a>
             </div>
-            <a href="{{ site.baseurl }}/blogs"><h2>blogs</h2></a>
+            <a href="{{ site.baseurl }}/bio-tuin"><h2>foodsafari</h2></a>
           </div>
         </div>
       </div>
@@ -52,10 +52,10 @@
         <div id="card5" class="gridSpace card">
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
-              <h3>Eigengemaakt Lekkers!</h3>
-              <a href="{{ site.baseurl }}/recepten"><h4>lees meer</h4></a>
+              <h3>Wil jij weten wat er zoal te beleven valt per seizoen op het Bloei en Leef tuinderijtje?</h3>
+              <a href="{{ site.baseurl }}/bio-tuin"><h4>lees meer</h4></a>
             </div>
-            <a href="{{ site.baseurl }}/recepten"><h2>gezond eten</h2></a>
+            <a href="{{ site.baseurl }}/bio-tuin"><h2>bio-tuin</h2></a>
           </div>
         </div>
       </div>
