--- a/_sass/pages/home/news.sass
+++ b/_sass/pages/home/news.sass
@@ -14,6 +14,7 @@
       background-size: cover
       background-position: top
       clip-path: polygon(100% 0, 100% 75%, 50% 100%, 0% 75%, 0 0)
+      -webkit-clip-path: polygon(100% 0, 100% 75%, 50% 100%, 0% 75%, 0 0)
       border-radius: $bl-border-radius
       padding: 20px
     .cardInfo
