--- a/_sass/pages/home/header.sass
+++ b/_sass/pages/home/header.sass
@@ -5,6 +5,8 @@
 	background-position: center center
 	display: flex
 	flex-direction: column
+	justify-content: space-between
+	align-items: center
 	transition: 2s
 	margin-top: 0px
 
@@ -14,32 +16,30 @@
 		height: 50vw
 		max-width: 300px
 		max-height: 300px
-		margin: 12vh auto 4vh auto
+		margin-top: 2vh
 		padding: 30px
 		background-color: rgba(255,255,255,0.5)
 		box-shadow: 0px 0px 10px rgb(255,255,255)
-		align-self: flex-start
 		border-radius: 100%
-		svg
-			filter: drop-shadow(0px 4px 3px rgba(0,0,0,0.8))
-
-	// *****kicker*****
-	.kicker
-		align-self: center
-		padding: 0 5%
-		margin: auto
 		display: flex
-		flex-direction: column
+		align-items: center
+		justify-content: center
+		svg
+			-webkit-filter: drop-shadow(0px 4px 3px rgba(0,0,0,0.6)) drop-shadow(0px 8px 13px rgba(0,0,0,0.4)) drop-shadow(0px 18px 23px rgba(0,0,0,0.2))
+			filter: drop-shadow(0px 4px 3px rgba(0,0,0,0.6)) drop-shadow(0px 8px 13px rgba(0,0,0,0.4)) drop-shadow(0px 18px 23px rgba(0,0,0,0.2))
+
+	.kicker
+		padding: 0 3vw
+		margin: 2vh auto 3vh auto
+		display: flex
 		background-color: rgba(255,255,255,0.5)
 		box-shadow: 0px 0px 10px rgb(255,255,255)
-		align-self: center
 		color: $bl-green
 		text-shadow: 0px 4px 3px rgba(0,0,0,0.3)
 
 
 	// *****slider circles*****
 	.circles
-		align-self: flex-end
 		width: 90vw
 		margin: auto
 		margin-bottom: 20px
@@ -64,7 +64,6 @@
 .header1
 	background-image: url("../img/backgrounds/bloei-en-leef-header-img-2.jpg")
 	transition: 2s
-
 .header2
 	background-image: url("../img/backgrounds/bloei-en-leef-header-img-1.jpg")
 	transition: 2s
