--- a/_includes/general/navigation1.html
+++ b/_includes/general/navigation1.html
@@ -3,7 +3,7 @@
   <a href="{{site.baseurl}}/recepten">recepten</a>
   <a href="{{site.baseurl}}/blogs">blogs</a>
   <a href="{{site.baseurl}}/weetjes">weetjes</a>
-  <a href="{{site.baseurl}}/weekenden-en-retraites">weekenden & retraites</a>
+  <a href="{{site.baseurl}}/weekenden-en-retraites">weekenden</a>
   <a href="{{site.baseurl}}/coaching">coaching</a>
   <a href="{{site.baseurl}}/contact">contact</a>
 </nav>
