--- a/_includes/general/navigation2.html
+++ b/_includes/general/navigation2.html
@@ -1,11 +1,8 @@
 <nav id="nav2">
   <a href="{{site.baseurl}}/bloei-en-leef">Bloei & leef?</a>
   <a href="{{site.baseurl}}/foodsafari">foodsafari</a>
-  <a href="{{site.baseurl}}/weekenden-en-retraites">weekenden & retraites</a>
-  <a href="{{site.baseurl}}/weetjes">weetjes</a>
   <a href="{{site.baseurl}}/culinaire-fotografie">culinaire fotografie</a>
   <a href="{{site.baseurl}}/agenda">agenda</a>
-  <a href="">nieuwsbrief</a>
+  <a href="{{site.baseurl}}/nieuwsbrief">nieuwsbrief</a>
   <a href="{{site.baseurl}}/partners">partners</a>
-  <a href="{{site.baseurl}}/coaching">coaching</a>
 </nav>
