--- a/_includes/general/footer.html
+++ b/_includes/general/footer.html
@@ -7,32 +7,24 @@
     </div>
 
     <div class="row">
-
-      <div id="socialMedia" class="col-lg-8 col-sm-8">
-        <h3>volg <span class="lobster">Bloei en Leef</span></h3>
-        <div class="socialMediaContainer">
-          <a href="https://twitter.com/BloeienLeef"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/BloeienLeef"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-          <a href="https://www.pinterest.com/bloeienleef"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
-          <a href="https://instagram.com/bloeienleef"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a href="https://nl.pinterest.com/explore/badkuipen/"><i class="fa fa-bath" aria-hidden="true"></i></a>
+      <div class="col-lg-8 col-md-6 col-sm-12">
+        <div id="socialMedia" class="gridSpace footerConect">
+          <h3>volg <span class="lobster">Bloei en Leef</span></h3>
+          <div class="socialMediaContainer">
+            <a href="https://twitter.com/BloeienLeef"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/BloeienLeef"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.pinterest.com/bloeienleef"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
+            <a href="https://instagram.com/bloeienleef"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://nl.pinterest.com/explore/badkuipen/"><i class="fa fa-bath" aria-hidden="true"></i></a>
+          </div>
         </div>
       </div>
 
-      <div id="book" class="col-lg-4 col-sm-4 card">
-        <div onclick="" class="fadeCard">
-          <div class="cardInfo">
-              <h3>Bestel ons kookboek "natuurlijk Samen Koken"</h3>
-              <h4>lees meer </h4>
-          </div>
-          <div class="cardTitle">
-            <h2>bestel</h2>
-          </div>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div id="newsLetter" class="gridSpace footerConect">
+          {% include forms/nieuwsbrief.html %}
         </div>
-
-
-
+      </div>
     </div>
   </div>
-
 </footer>
