--- a/_includes/pages/home/cards.html
+++ b/_includes/pages/home/cards.html
@@ -10,7 +10,7 @@
               <h3>Wat leuk dat jij Bloei en Leef gevonden hebt! We stellen ons graag aan jou voor</h3>
               <a href="{{ site.baseurl }}/bloei-en-leef"><h4>lees meer</h4></a>
             </div>
-            <a href="{{ site.baseurl }}/bloei-en-leef"><h2>Bloei & Leef?</h2></a>
+            <a href="{{ site.baseurl }}/bloei-en-leef"><h2>Bloei en Leef?</h2></a>
           </div>
         </div>
 
