--- a/_sass/general/footer.sass
+++ b/_sass/general/footer.sass
@@ -53,17 +53,14 @@ footer
         font-size: 1.3em
 
   #socialMedia
-    display: inline-flex
-    flex-direction: column
-    justify-content: space-around
     background: #3494E6
     background: -webkit-linear-gradient(to left, $bl-hover-color , $bl-green)
     background: linear-gradient(to left, $bl-hover-color , $bl-green)
-
-    min-height: 30vh
-    border: 10px solid white
-    border-radius: 20px
+    border-radius: $bl-border-radius
     color: white
+    display: flex
+    justify-content: space-around
+    flex-direction: column
     h3
       color: white
       .lobster
@@ -81,42 +78,59 @@ footer
         &:hover
           text-shadow: 2px 2px 3px black
 
+  #newsLetter
+    border-radius: $bl-border-radius
+    background-color: $bl-news-gray
+    padding: 10px
+    h3
+      margin-top: -5px
 
-  .card
-    height: 30vh
-    border-radius: 20px
-    background-position: center
-    background-size: contain
-    background-repeat: no-repeat
-    margin: 0px
-    padding: 0px
-    background-image: url("../img/products/bloei-en-leef-kookboek.jpg")
-
-    .fadeCard
+    .radioContainer
       display: flex
-      flex-direction: column
+      flex-direction: row
+      justify-content: space-around
+    textarea, input
       width: 100%
-      height: 100%
-      background-color: rgba(255,255,255,0.0)
-      &:hover
-        cursor: pointer
-        background-color: rgba(255,255,255,0.8)
-        transition: 200ms
-        .cardInfo
-          opacity: 1
-          transition: 300ms
+      box-sizing: border-box
+      border: 2px solid $bl-green
+      background-color: $bl-green
+      color: white
+      border-radius: $bl-border-radius-small
 
-      .cardInfo
-        justify-content: center
-        margin: auto 20px 0 20px
-        opacity: 0
-      .cardTitle
-        background-color: rgba(255,0,0,0.5)
-        padding: 2px
-        border-radius: 10px
-        margin: auto auto
-        margin-bottom: 15px
-        justify-content: flex-end
-        width: 50%
-      h2
-        color: white
+    textarea
+      height: 160px
+      padding: 9px 10px
+      resize: vertical
+      &:focus
+        background-color: white
+        border: 2px solid $bl-green
+        outline: 0
+        color: $bl-text-color
+
+    input
+      height: 40px
+      padding: 0 10px
+      &:focus
+        background-color: white
+        border: 2px solid $bl-green
+        outline: 0
+        color: $bl-text-color
+    \::-webkit-input-placeholder
+      color: white
+    \:-moz-placeholder
+      color: white
+    \::-moz-placeholder
+      color: white
+    \:-ms-input-placeholder
+      color: white
+
+    .sendButtonContainer
+      [type="submit"]
+        background-color: $bl-news-gray
+        border: 2px solid $bl-green
+        color: $bl-green
+        text-align: left
+        &:hover
+          background-color: $bl-green
+          border: 2px solid $bl-green
+          color: white
