--- a/_includes/general/navigation2.html
+++ b/_includes/general/navigation2.html
@@ -1,8 +1,7 @@
 <nav id="nav2">
-  <a href="{{site.baseurl}}/bloei-en-leef">Bloei & leef?</a>
+  <a href="{{site.baseurl}}/bloei-en-leef">Bloei en leef?</a>
   <a href="{{site.baseurl}}/foodsafari">foodsafari</a>
   <a href="{{site.baseurl}}/culinaire-fotografie">culinaire fotografie</a>
   <a href="{{site.baseurl}}/agenda">agenda</a>
-  <a href="{{site.baseurl}}/nieuwsbrief">nieuwsbrief</a>
   <a href="{{site.baseurl}}/partners">partners</a>
 </nav>
