--- a/_sass/general/footer.sass
+++ b/_sass/general/footer.sass
@@ -84,6 +84,7 @@ footer
     padding: 10px
     h3
       margin-top: -5px
+      font-weight: bold
 
     .radioContainer
       display: flex
@@ -125,6 +126,7 @@ footer
       color: white
 
     .sendButtonContainer
+      margin-bottom: -10px
       [type="submit"]
         background-color: $bl-news-gray
         border: 2px solid $bl-green
