global input shadow fix

--- a/_sass/general/page.sass
+++ b/_sass/general/page.sass
@@ -57,6 +57,9 @@ ul
     background: url("../favicon.ico") 0 8px no-repeat
     padding: 0px 0px 0px 50px
 
+  textarea, input
+    -webkit-appearance: none
+
 .gridSpace
   margin: 10px
 
